@@ -1,11 +1,0 @@
-/**
- * 
- */
-
-CFW = {
-	helloworld: helloworld
-}
-	
-function helloworld(){
-	alert('Hello World!');
-}
