@@ -4256,8 +4256,8 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: normal;
   font-display: auto;
-  src: url("./jarfont?name=fa-brands-400.eot");
-  src: url("./jarfont?name=fa-brands-400.eot?#iefix") format("embedded-opentype"), url("./jarfont?name=fa-brands-400.woff2") format("woff2"), url("./jarfont?name=fa-brands-400.woff") format("woff"), url("./jarfont?name=fa-brands-400.ttf") format("truetype"), url("./jarfont?name=fa-brands-400.svg#fontawesome") format("svg"); }
+  src: url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-brands-400.eot");
+  src: url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-brands-400.eot?#iefix") format("embedded-opentype"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-brands-400.woff2") format("woff2"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-brands-400.woff") format("woff"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-brands-400.ttf") format("truetype"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-brands-400.svg#fontawesome") format("svg"); }
 
 .fab {
   font-family: 'Font Awesome 5 Brands'; }
@@ -4266,8 +4266,8 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 400;
   font-display: auto;
-  src: url("./jarfont?name=fa-regular-400.eot");
-  src: url("./jarfont?name=fa-regular-400.eot?#iefix") format("embedded-opentype"), url("./jarfont?name=fa-regular-400.woff2") format("woff2"), url("./jarfont?name=fa-regular-400.woff") format("woff"), url("./jarfont?name=fa-regular-400.ttf") format("truetype"), url("./jarfont?name=fa-regular-400.svg#fontawesome") format("svg"); }
+  src: url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-regular-400.eot");
+  src: url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-regular-400.eot?#iefix") format("embedded-opentype"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-regular-400.woff2") format("woff2"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-regular-400.woff") format("woff"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-regular-400.ttf") format("truetype"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-regular-400.svg#fontawesome") format("svg"); }
 
 .far {
   font-family: 'Font Awesome 5 Free';
@@ -4277,8 +4277,8 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 900;
   font-display: auto;
-  src: url("./jarfont?name=fa-solid-900.eot");
-  src: url("./jarfont?name=fa-solid-900.eot?#iefix") format("embedded-opentype"), url("./jarfont?name=fa-solid-900.woff2") format("woff2"), url("./jarfont?name=fa-solid-900.woff") format("woff"), url("./jarfont?name=fa-solid-900.ttf") format("truetype"), url("./jarfont?name=fa-solid-900.svg#fontawesome") format("svg"); 
+  src: url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-solid-900.eot");
+  src: url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-solid-900.eot?#iefix") format("embedded-opentype"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-solid-900.woff2") format("woff2"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-solid-900.woff") format("woff"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-solid-900.ttf") format("truetype"), url("/cfw/jarresource?pkg=com.pengtoolbox.cfw.resources.fonts&file=fa-solid-900.svg#fontawesome") format("svg"); 
 }
 
 .fa,
