@@ -1,0 +1,4 @@
+
+$(document).ready(function () {
+    $('.dropdown-toggle').dropdown();
+});
