@@ -32,7 +32,7 @@ cfw_caching_file_enabled=false
 # Login
 #============================================
 # Choose if you want to prompt for login
-cfw_authentication_enabled=false
+cfw_authentication_enabled=true
 
 # Choose authentication method and set the respective settings
 #   - "CSV":  Use the "username;password" credentials from a file
