@@ -1,9 +1,11 @@
 ##############################################
 # Backlog
 ##############################################
-- move HTML for login to CFW project
 - move defaultHTML to CFW project
+- Session Timeout Configurable
+- Fix package resource security issue (CFWSetup.addAllowedPackages())
 
 ##############################################
 # Current
 ##############################################
+- move HTML for login to CFW project
